<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/logo_pu_1"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/secondaryTextColor"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/app_desc"
            android:textAlignment="center"
            android:textColor="@color/secondaryTextColor"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/roboto"
            android:text="@string/act_login"
            android:textAlignment="textStart"
            android:textColor="@color/secondaryTextColor"
            android:textSize="24sp"/>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:mtf_labelColor="@color/secondaryTextColor"
            app:mtf_image="@mipmap/ic_person"
            app:mtf_hasFocus="true">

            <EditText
                android:id="@+id/ed_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_username"
                android:textColor="@color/secondaryTextColor"
                android:backgroundTint="@color/secondaryTextColor"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:mtf_labelColor="@color/secondaryTextColor"
            app:mtf_image="@mipmap/ic_password"
            app:mtf_hasFocus="true">

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                android:inputType="textPassword"
                android:backgroundTint="@color/secondaryTextColor"
                android:textColor="@color/secondaryTextColor"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondaryColor"
            android:textColor="@color/secondaryTextColor"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="37dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/act_login"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/app_version"
            android:textAlignment="center"
            android:textColor="@color/secondaryTextColor"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:fontFamily="@font/roboto"
            android:text="@string/app_year"
            android:textAlignment="center"
            android:textColor="@color/secondaryTextColor"
            android:textSize="12sp"/>

    </LinearLayout>
</ScrollView>